--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
   'djangorestframework>=3.14.0',
   'drf-spectacular>=0.26.5',
   'gunicorn>=21.2.0',
-  'mysqlclient>=2.2.4',
+  #'mysqlclient>=2.2.4',
   'passage-identity>=2.5.1',
   'Pillow>=10.3.0',
   'pre-commit>=3.5.0',
@@ -51,7 +51,7 @@ quote-style = 'single'
 
 [tool.pdm.scripts]
 pre_dev = "python ./scripts/set_my_ip.py"
-dev = "python manage.py runserver 0.0.0.0:19003"
+dev = "python manage.py runserver 127.0.0.1:19003"
 createsuperuser = "python manage.py createsuperuser"
 pre_migrate = "python manage.py makemigrations"
 migrate = "python manage.py migrate"
